--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <h1>Many of the people are affected by the flood this year</h1>
     <h2>We should definitely help them so that they can servive</h2>
     <p>At least we can show our kindness to them.</p>
+    <img src="stones.jpg" alt="">
+    <img src="flowers.jpg" alt="">
 
 </body>
 
